--- a/Pomodoro/package.json
+++ b/Pomodoro/package.json
@@ -17,7 +17,10 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/stack": "^7.3.2",
+    "axios": "^1.9.0",
+    "dayjs": "^1.11.13",
     "expo": "~53.0.9",
+    "expo-audio": "~0.4.5",
     "expo-av": "~15.1.4",
     "expo-blur": "~14.1.4",
     "expo-constants": "~17.1.6",
@@ -25,6 +28,7 @@
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.1.7",
     "expo-linking": "~7.1.5",
+    "expo-notifications": "~0.31.2",
     "expo-router": "~5.0.6",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
@@ -35,16 +39,16 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
+    "react-native-svg": "^15.12.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5",
-    "expo-audio": "~0.4.5",
-    "expo-notifications": "~0.31.2"
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
